# CIS375GroupProject

./: .gitignore  README  windows_vpn.py
.github/workflows/: manual.yml
client/: Data  client.py  client.spec  cloud_manager.py  cloudtest.py  filter_manager.py  observer.py  requirements.txt  statistics_manager.py  vpn_manager.py  vpntest.py
client/cloud/: ServerManager.py  aws_interface.py  cloud_interface.py  create.py
client/data/: README  dns_log.txt
client/data/block/: Block_Ads_Light.block  Google.block  test.block
client/tests/: statTest.py  test_cloud_interface.py  test_cloud_manager.py  vpntest.py
client/vpn/: vpn_interface.py  windows_vpn.py
client/vpn/windows/: CMakeLists.txt  README
client/vpn/windows/src/: windows_vpn.cpp  windows_vpn.h
server/: README  dockerfile  install.sh  server_cmd.py  server_dns.py  server_mon.py  setup.sh
server/config/: charon-systemd.conf  ipsec.conf  swanctl.conf
server/config/cert/: README  ca.conf  server.conf  template.conf
server/interceptor/: Makefile  intercept.c
server/systemd/: server_cmd.service  server_dns.service  server_mon.service
server/templates/: cert.template  dnsmasq.template  nftables.template  swanctl.template
